Fixing footer color to increase contrast

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
   --resume-btn-color: #aa3234;
   --project-hover-color: #d39e9f;
   --project-bg-color: #c4c4c4;
-  --backup-color2: #506e73;
+  --footer-color: #506e73;
   --work-exp-header-color: #01233f;
   --menu-bg-color: rgba(80, 110, 115, 0.8);
 }
@@ -90,7 +90,7 @@ hr {
   width: 100%;
   justify-content: center;
   align-items: center;
-  background-color: var(--section-accent-dark);
+  background-color: var(--footer-color);
   color: white;
 }
 
